--- a/VuThanhDuong_DA/Views/Admin/Sidebar.cshtml
+++ b/VuThanhDuong_DA/Views/Admin/Sidebar.cshtml
@@ -32,7 +32,7 @@
                     QUẢN LÝ DANH MỤC SẢN PHẨM
                 </li>
                 <li class="list-group-item">
-                    <a href="#">Thêm mới danh mục</a>
+                    <a href="~/Admin/CategoryCreate">Thêm mới danh mục</a>
                 </li>
                 <li class="list-group-item">
                     <a href="~/Admin/CategoryList">Danh sách danh mục</a>
@@ -45,10 +45,10 @@
                     QUẢN LÝ SẢN PHẨM
                 </li>
                 <li class="list-group-item">
-                    <a href="#">Thêm mới sản phẩm</a>
+                    <a href="~/Admin/ProductCreate">Thêm mới sản phẩm</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="#">Danh sách sản phẩm</a>
+                    <a href="~/Admin/ProductList/0">Danh sách sản phẩm</a>
                 </li>
             </ul>
         </li>
