--- a/VuThanhDuong_DA/Views/Product/Category.cshtml
+++ b/VuThanhDuong_DA/Views/Product/Category.cshtml
@@ -18,25 +18,35 @@
             <p class="text-justify">@ViewBag.categoryDescription</p>
         </div>
     </div>
+    <div class="row-pl-2 mb-3 pb-3 border-bottom">
+        <div class="col-12 text-right">
+            <span><i class="fa-solid fa-filter d-inline"></i> Sắp xếp:</span>
+            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-not-equal"></i> Mặc định</a>
+            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-up-a-z"></i> A-Z</a>
+            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-down-a-z"></i> Z-A</a>
+            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-up-1-9"></i> Giá tăng dần</a>
+            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-down-1-9"></i> Giá giảm dần</a>
+        </div>
+    </div>
     <div class="row pl-2">
-            @{
-                var info = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
-                foreach (var p in Model)
-                {
-                    <a href="~/Product/Details/?id=@p.product_id">
-                        <div class="card m-1">
-                            <img class="card-img-top img-fluid" src="~/Images/@p.product_thumbnail_image" style="width: 250px; height: 170px"/>
-                            <div class="card-footer text-center">
-                                <p class="card-subtitle font-weight-bold">
-                                    @p.product_name
-                                </p>
-                                <p class="card-subtitle font-weight-bold mt-1 text-danger">
-                                    <span class="text-dark">Giá:</span> @String.Format(info, "{0:C0}", p.product_price)
-                                </p>
-                            </div>
+        @{
+            var info = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
+            foreach (var p in Model)
+            {
+                <a href="~/Product/Details/?id=@p.product_id">
+                    <div class="card m-1">
+                        <img class="card-img-top img-fluid" src="~/Images/@p.product_thumbnail_image" style="width: 250px; height: 170px" />
+                        <div class="card-footer text-center">
+                            <p class="card-subtitle font-weight-bold">
+                                @p.product_name
+                            </p>
+                            <p class="card-subtitle font-weight-bold mt-1 text-danger">
+                                <span class="text-dark">Giá:</span> @String.Format(info, "{0:C0}", p.product_price)
+                            </p>
                         </div>
-                    </a>
-                }
+                    </div>
+                </a>
             }
+        }
     </div>
 </div>
