--- a/VuThanhDuong_DA/Views/Home/Dropdown.cshtml
+++ b/VuThanhDuong_DA/Views/Home/Dropdown.cshtml
@@ -4,6 +4,7 @@
 @{
     if (Model != null)
     {
+        <a class="dropdown-item font-weight-bold" href="~/Product/All">Tất cả</a>
         foreach (var pc in Model)
         {
             <a class="dropdown-item font-weight-bold" href="~/Product/Category/?id=@pc.product_category_id">
