--- a/VuThanhDuong_DA/Views/Shared/_LayoutPage.cshtml
+++ b/VuThanhDuong_DA/Views/Shared/_LayoutPage.cshtml
@@ -16,6 +16,9 @@
         .breadcrumb a {
             color: darkslategrey;
         }
+        .hiddenComp {
+            display: none;
+        }
     </style>
 </head>
 
