--- a/VuThanhDuong_DA/Views/Product/All.cshtml
+++ b/VuThanhDuong_DA/Views/Product/All.cshtml
@@ -6,6 +6,10 @@
 @using VuThanhDuong_DA.Models;
 @model List<product>
 
+@{ 
+    int numRange = 1;
+}
+
 <div class="container-fluid mt-3 pb-3">
     <div class="row-pl-2 mb-3 border-bottom">
         <div class="col-12">
@@ -27,20 +31,57 @@
             var info = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
             foreach (var p in Model)
             {
+                <div>
+
+                </div>
                 <a href="~/Product/Details/?id=@p.product_id">
-                    <div class="card m-1">
-                        <img class="card-img-top img-fluid" src="~/Images/@p.product_thumbnail_image" style="width: 250px; height: 170px" />
+                    <div id="@numRange" class="card m-1 hiddenComp" style="width: 17vw">
+                        <img class="card-img-top img-fluid" src="~/Images/@p.product_thumbnail_image" style="width: 100vw; height: 170px" />
                         <div class="card-footer text-center">
-                            <p class="card-subtitle font-weight-bold">
+                            <p class="font-weight-bold text-truncate" style="width: 100%">
                                 @p.product_name
                             </p>
                             <p class="card-subtitle font-weight-bold mt-1 text-danger">
                                 <span class="text-dark">Giá:</span> @String.Format(info, "{0:C0}", p.product_price)
                             </p>
                         </div>
+                        @if (p.product_inventory == 0)
+                        {
+                            <span class="badge badge-danger" style="position: absolute; left: 0; top: 0">HẾT HÀNG</span>
+                        }
+                        else if (p.product_discount > 0)
+                        {
+                            <span class="badge badge-warning" style="position: absolute; left: 0; top: 0">GIẢM GIÁ</span>
+                        }
                     </div>
                 </a>
+                numRange++;
             }
         }
+        <div class="col-12 text-center mt-4">
+            <button id="btnLoad" class="btn btn-outline-dark" onclick="loadMore()">Tải thêm</button>
+        </div>
     </div>
 </div>
+
+<script>
+    let max = @numRange;
+    let x = 12;
+    $(document).ready(function () {
+        if (12 >= max) {
+            $("#btnLoad").addClass("hiddenComp");
+        }
+        for (let i = 1; i <= 12; ++i) {
+            $("#" + i.toString()).removeClass("hiddenComp");
+        }
+    });
+    function loadMore() {
+        if (x + 12 >= max) {
+            $("#btnLoad").addClass("hiddenComp");
+        }
+        for (let i = x + 1; i <= x + 12; ++i) {
+            $("#" + i.toString()).removeClass("hiddenComp");
+        }
+        x += 12;
+    }
+</script>
