--- a/VuThanhDuong_DA/Views/Admin/Sidebar.cshtml
+++ b/VuThanhDuong_DA/Views/Admin/Sidebar.cshtml
@@ -9,7 +9,7 @@
                     QUẢN LÝ TÀI KHOẢN NGƯỜI DÙNG
                 </li>
                 <li class="list-group-item">
-                    <a href="#">Danh sách tài khoản người dùng</a>
+                    <a href="~/Admin/UserList">Danh sách tài khoản người dùng</a>
                 </li>
             </ul>
         </li>
@@ -19,10 +19,10 @@
                     QUẢN LÝ ĐƠN HÀNG NGƯỜI DÙNG
                 </li>
                 <li class="list-group-item">
-                    <a href="#">Đơn hàng chờ xác nhận</a>
+                    <a href="~/Admin/OrderProcess">Đơn hàng chờ xác nhận</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="#">Cập nhật giao hàng thành công</a>
+                    <a href="~/Admin/OrderSucceed">Cập nhật giao hàng thành công</a>
                 </li>
             </ul>
         </li>
