--- a/VuThanhDuong_DA/Views/Admin/Login.cshtml
+++ b/VuThanhDuong_DA/Views/Admin/Login.cshtml
@@ -7,7 +7,10 @@
 
 <div class="container-fluid mt-3">
     <div class="row">
-        <div class="col-9">
+        <div class="col-2">
+
+        </div>
+        <div class="col-5">
             <form method="post" action="~/Admin/Login">
                 <div class="form-group">
                     <label>Admin username</label>
