--- a/VuThanhDuong_DA/Views/Product/All.cshtml
+++ b/VuThanhDuong_DA/Views/Product/All.cshtml
@@ -19,11 +19,11 @@
     <div class="row-pl-2 mb-3 pb-3 border-bottom">
         <div class="col-12 text-right">
             <span><i class="fa-solid fa-filter d-inline"></i> Sắp xếp:</span>
-            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-not-equal"></i> Mặc định</a>
-            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-up-a-z"></i> A-Z</a>
-            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-down-a-z"></i> Z-A</a>
-            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-up-1-9"></i> Giá tăng dần</a>
-            <a href="#!" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-down-1-9"></i> Giá giảm dần</a>
+            <a href="~/Product/All/?displaymode=@FilterMode.DEFAULT" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-not-equal"></i> Mặc định</a>
+            <a href="~/Product/All/?displaymode=@FilterMode.ATOZ" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-up-a-z"></i> A-Z</a>
+            <a href="~/Product/All/?displaymode=@FilterMode.ZTOA" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-down-a-z"></i> Z-A</a>
+            <a href="~/Product/All/?displaymode=@FilterMode.ONETONINE" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-up-1-9"></i> Giá tăng dần</a>
+            <a href="~/Product/All/?displaymode=@FilterMode.NINETOONE" class="btn btn-outline-dark d-inline"><i class="fa-solid fa-arrow-down-1-9"></i> Giá giảm dần</a>
         </div>
     </div>
     <div class="row pl-2">
@@ -68,7 +68,7 @@
     let max = @numRange;
     let x = 12;
     $(document).ready(function () {
-        if (12 >= max) {
+        if (12 >= max - 1) {
             $("#btnLoad").addClass("hiddenComp");
         }
         for (let i = 1; i <= 12; ++i) {
