--- a/VuThanhDuong_DA/Views/Shared/Admin_LayoutPage.cshtml
+++ b/VuThanhDuong_DA/Views/Shared/Admin_LayoutPage.cshtml
@@ -12,6 +12,11 @@
     <script src="~/fontawesome-free-kit/js/all.min.js"></script>
     <script src="~/Scripts/js/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/js/bootstrap.min.js"></script>
+    <style>
+        .hiddenComp {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
